--- a/app/src/App.css
+++ b/app/src/App.css
@@ -45,4 +45,5 @@ body {
   margin:0 auto;
   min-height: 100%;
   background: white;
+  background-image: linear-gradient(to top, #09d3ac, white)
 }
